test_suite/tests/ui/remote/wrong_de.stderr
error[E0308]: mismatched types
 --> $DIR/tests/ui/remote/wrong_de.rs:7:10
  |
7 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^ expected `u16`, found `u8`
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can convert a `u8` to a `u16`
  |
7 | #[derive(Deserialize.into())]
  |                     +++++++
